--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,25 @@
+/*Fonts*/
+@font-face {
+  src: url(fonts/Mogan-Regular.ttf);
+  font-family: Mogan;
+}
+@import url("https://use.typekit.net/fau2fiu.css");
+
+/*Variables*/
+:root {
+  --bg-color: #ffff;
+  --link-color: #f3b3b9;
+  --link-hover-color: #a9a1ca;
+  --color-4: #97cfca;
+  --color-5: #a2c8f4;
+
+  --primary-font: Mogan, serif;
+  --secondary-font: "Agenda", sans-serif;
+  --main-text-color: #364b3e;
+
+  --white-space: 1rem;
+}
+
 @supports (display: grid) {
   @media screen and (min-width: 768px) and (max-width: 1100px) {
   }
