--- a/css/style.css
+++ b/css/style.css
@@ -19,6 +19,12 @@
 
   --white-space: 1rem;
 }
+.categories button {
+  border: 1px solid var(--link-color);
+  border-radius: 0.6rem;
+  background-color: var(--link-color);
+  padding: 1% 3%;
+}
 
 @supports (display: grid) {
   @media screen and (min-width: 768px) and (max-width: 1100px) {
