--- a/css/style.css
+++ b/css/style.css
@@ -19,14 +19,31 @@
 
   --white-space: 1rem;
 }
+
+/*Shop*/
+#shop_main {
+  background-color: var(--bg-color);
+  color: var(--main-text-color);
+  font-family: var(--secondary-font);
+}
 .categories button {
-  border: 1px solid var(--link-color);
+  border: none;
   border-radius: 0.6rem;
   background-color: var(--link-color);
-  padding: 1% 3%;
+  padding: 1% 4%;
+  max-width: 100%;
+  font-family: var(--secondary-font);
+  color: var(--bg-color);
+}
+.categories button:hover {
+  background-color: var(--link-hover-color);
 }
 
 @supports (display: grid) {
+  .categories {
+    display: flex;
+    justify-content: space-around;
+  }
   @media screen and (min-width: 768px) and (max-width: 1100px) {
   }
   @media screen and (min-width: 1101px) {
