--- a/css/style.css
+++ b/css/style.css
@@ -23,10 +23,10 @@
 /*Shop*/
 #shop_main {
   background-color: var(--bg-color);
-  color: var(--main-text-color);
+  color: var(--bg-color);
   font-family: var(--secondary-font);
 }
-.categories button {
+button {
   border: none;
   border-radius: 0.6rem;
   background-color: var(--link-color);
@@ -35,14 +35,40 @@
   font-family: var(--secondary-font);
   color: var(--bg-color);
 }
-.categories button:hover {
+button:hover {
   background-color: var(--link-hover-color);
+}
+.inner_shopItem {
+  border: 1px solid blue;
+  border-radius: 1.5rem;
+  background-color: var(--color-4);
+}
+.overall_shopItem {
+  border: 1px solid red;
+  text-align: center;
+}
+.overall_shopItem button {
+  padding: 2% 5%;
+}
+
+.shop_img {
+  max-width: 90%;
+  border-radius: 2.5rem;
+  padding: 5%;
 }
 
 @supports (display: grid) {
   .categories {
     display: flex;
     justify-content: space-around;
+    flex-wrap: wrap;
+  }
+  .dynamic_content {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, 300px);
+    justify-content: space-around;
+    padding: 1.5rem 2rem;
+    gap: 1%;
   }
   @media screen and (min-width: 768px) and (max-width: 1100px) {
   }
