--- a/css/style.css
+++ b/css/style.css
@@ -59,6 +59,57 @@ header a:hover {
   transition: all ease 0.5s;
 }
 
+/*footer*/
+footer {
+  font-family: var(--secondary-font);
+  color: var(--main-text-color);
+  padding: calc(var(--white-space) * 2) var(--white-space);
+  border-top: solid var(--main-text-color) 0.1rem;
+}
+footer nav {
+  display: grid;
+  grid-template-columns: 1.5fr 1fr;
+  gap: calc(var(--white-space) * 3);
+}
+footer h4 {
+  font-size: 1rem;
+  margin: 0%;
+}
+footer p {
+  padding: 0;
+  margin: 0%;
+}
+
+.info div {
+  display: grid;
+  grid-template-columns: 1fr 5fr;
+  grid-template-rows: repeat(2, auto);
+  column-gap: var(--white-space);
+  align-items: end;
+  padding-top: var(--white-space);
+}
+.info p {
+  grid-column: 2/3;
+}
+.info img {
+  grid-row: 1/3;
+  max-width: 2rem;
+}
+.social {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: 1fr 3fr;
+  column-gap: var(--white-space);
+  justify-items: center;
+}
+.social h4 {
+  grid-column: 1/3;
+  margin: 0;
+}
+.social img {
+  max-width: 3rem;
+}
+
 @supports (display: grid) {
   @media screen and (min-width: 768px) and (max-width: 1100px) {
     header {
