--- a/css/style.css
+++ b/css/style.css
@@ -21,6 +21,9 @@
 }
 
 /*header*/
+.hide {
+  display: none;
+}
 header {
   margin: var(--white-space);
   display: flex;
@@ -29,28 +32,41 @@ header {
   align-items: center;
   font-family: var(--primary-font);
 }
+.topNav {
+  width: 100%;
+  display: grid;
+  grid-template-columns: repeat(3, auto);
+  align-items: center;
+
+  overflow: hidden;
+  position: relative;
+}
 header nav {
   width: 100%;
+  display: none;
 }
 header ul {
   display: grid;
-  grid-template-columns: repeat(5, auto);
-  align-items: center;
+  grid-template-rows: repeat(5, auto);
+  row-gap: var(--white-space);
+  justify-items: center;
   list-style-type: none;
   margin: 0;
   padding: 0;
 }
-/*header li {
-  justify-self: center;
-}*/
 .logo {
-  width: 70%;
+  width: 170%;
   height: auto;
+  grid-column: 2/3;
+  justify-self: center;
 }
 .logo img {
   max-width: 100%;
 }
-
+.menu {
+  max-width: 30%;
+  justify-self: end;
+}
 header a {
   color: var(--main-text-color);
   text-decoration: none;
