--- a/css/style.css
+++ b/css/style.css
@@ -45,7 +45,6 @@ header nav {
 header ul {
   display: grid;
   grid-template-rows: repeat(5, auto);
-  row-gap: var(--white-space);
   justify-items: center;
   list-style-type: none;
   margin: 0;
@@ -69,8 +68,13 @@ header a {
   text-decoration: none;
   font-size: 1.2rem;
 }
-header a:hover {
-  color: var(--color-4);
+header li {
+  width: 100%;
+  text-align: center;
+  padding: var(--white-space);
+}
+header li:hover {
+  background-color: rgb(240, 240, 240);
   transition: all ease 0.5s;
 }
 .cart {
