--- a/css/style.css
+++ b/css/style.css
@@ -18,6 +18,8 @@
   --main-text-color: #364b3e;
 
   --white-space: 1rem;
+
+  --shadow: 0 0 1rem #a7a7a7;
 }
 
 /*Shop*/
@@ -31,7 +33,7 @@
   color: var(--bg-color);
   font-family: var(--secondary-font);
 }
-button {
+.categories a {
   border: none;
   border-radius: 0.6rem;
   background-color: var(--link-color);
@@ -40,25 +42,36 @@ button {
   font-family: var(--secondary-font);
   color: var(--bg-color);
   font-style: normal;
+  text-decoration: none;
 }
-button:hover {
+.categories a:hover {
   background-color: var(--link-hover-color);
 }
 .inner_shopItem {
-  border: 1px solid blue;
   border-radius: 1.5rem;
   background-color: var(--color-4);
 }
+.inner_shopItem:hover {
+  box-shadow: var(--shadow);
+}
 .overall_shopItem {
-  border: 1px solid red;
   text-align: center;
 }
 .overall_shopItem button {
-  padding: 2% 5%;
+  border: none;
+  border-radius: 0.6rem;
+  background-color: var(--link-color);
+  max-width: 100%;
+  font-family: var(--secondary-font);
+  color: var(--bg-color);
+  font-style: normal;
   margin-top: 5%;
   margin-bottom: 5%;
+  cursor: pointer;
 }
-
+.overall_shopItem button:hover {
+  background-color: var(--link-hover-color);
+}
 .shop_img {
   max-width: 90%;
   border-radius: 2.5rem;
@@ -86,7 +99,13 @@ button:hover {
     padding: 1.5rem 2rem;
     gap: 1%;
   }
-  @media screen and (min-width: 768px) and (max-width: 1100px) {
+  .overall_shopItem button {
+    padding: 5% 30%;
+  }
+  @media screen and (min-width: 768px) {
+    .overall_shopItem button {
+      padding: 3% 10%;
+    }
   }
   @media screen and (min-width: 1101px) {
   }
