--- a/css/style.css
+++ b/css/style.css
@@ -81,6 +81,9 @@
   text-decoration: none;
   color: var(--bg-color);
 }
+.dynamic_content {
+  display: none;
+}
 #shop_main h1 {
   color: var(--main-text-color);
   text-align: center;
@@ -315,6 +318,30 @@ b {
   background-color: var(--link-hover-color);
 }
 
+/*Preloader*/
+#preloader {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: var(--color-4);
+  z-index: 99999; /* makes sure it stays on top */
+}
+#status {
+  width: 100px;
+  height: 100px;
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  background-image: url("../assets/cart-icon.svg");
+  z-index: 9999;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  margin: -50px 0 0 -50px;
+}
+/*Media-quires*/
 @supports (display: grid) {
   .categories {
     display: flex;
