--- a/css/customise.css
+++ b/css/customise.css
@@ -19,27 +19,39 @@
 
   --white-space: 1rem;
 }
-
-/*custom page*/
-#customise_main {
+html {
+  width: 100vw;
+}
+body {
+  font-size: 1rem;
+  margin: 0%;
   color: var(--main-text-color);
   font-family: var(--secondary-font);
 }
-#customise_main .topPart {
-  display: grid;
-  justify-items: center;
+main {
+  padding: calc(var(--white-space) * 2);
 }
-#customise_main h1 {
+.topPart {
+  display: grid;
+}
+h1 {
   text-align: center;
 }
-#customise_main h1,
-#customise_main h2 {
+h1,
+h2 {
   font-family: var(--primary-font);
+  margin: 0 0 var(--white-space) 0;
+}
+p {
   margin: 0;
 }
-
-#customise_main .interaction {
+.topPart > div,
+.topPart > form {
+  margin-top: calc(var(--white-space) * 2);
+}
+.interaction {
   /* border: solid var(--main-text-color) 0.1rem;*/
+  justify-self: center;
   aspect-ratio: 3/4;
   display: grid;
   width: 80%;
@@ -47,7 +59,7 @@
   grid-template-rows: 1fr;
   margin: 0;
 }
-#customise_main .soap {
+.soap {
   background-image: url(../assets/Illustrations/Soap-oval.svg);
   background-size: cover;
   aspect-ratio: 3/4;
@@ -59,7 +71,7 @@
   grid-column: 1/2;
   grid-row: 1/2;
 }
-#customise_main .baseNote {
+.baseNote {
   background-image: url(../assets/Illustrations/Ceaderwood.svg);
   background-size: cover;
   aspect-ratio: 1/1;
@@ -71,7 +83,7 @@
   grid-row: 1/2;
   transform: rotate(-45deg);
 }
-#customise_main .headNote {
+.headNote {
   background-image: url(../assets/Illustrations/Rosemary.svg);
   background-size: cover;
   aspect-ratio: 1/1;
@@ -83,7 +95,7 @@
   grid-row: 1/2;
   transform: rotate(-10deg);
 }
-#customise_main .heartNote {
+.heartNote {
   background-image: url(../assets/Illustrations/Lavender.svg);
   background-size: cover;
   aspect-ratio: 1/1;
@@ -96,6 +108,20 @@
   transform: rotate(45deg);
 }
 
+.topPart form {
+  background-color: var(--color-4);
+  border-radius: 1rem;
+  padding: var(--white-space);
+  display: grid;
+  grid-template-columns: 1fr 10fr;
+  row-gap: var(--white-space);
+}
+.topPart form h2 {
+  grid-column: 1/3;
+}
+.topPart form label {
+  font-size: 1.5rem;
+}
 @supports (display: grid) {
   @media screen and (min-width: 768px) and (max-width: 1100px) {
   }
