--- a/css/customise.css
+++ b/css/customise.css
@@ -23,13 +23,16 @@ html {
   width: 100vw;
 }
 body {
-  font-size: 1rem;
+  font-size: 1.3rem;
   margin: 0%;
   color: var(--main-text-color);
   font-family: var(--secondary-font);
 }
 main {
   padding: calc(var(--white-space) * 2);
+}
+main > div {
+  margin-bottom: calc(var(--white-space) * 4);
 }
 .topPart {
   display: grid;
@@ -42,7 +45,9 @@ h2 {
   font-family: var(--primary-font);
   margin: 0 0 var(--white-space) 0;
 }
-p {
+
+p,
+h3 {
   margin: 0;
 }
 .topPart > div,
@@ -108,7 +113,7 @@ p {
   transform: rotate(45deg);
 }
 
-.topPart form {
+form {
   background-color: var(--color-4);
   border-radius: 1rem;
   padding: var(--white-space);
@@ -116,12 +121,22 @@ p {
   grid-template-columns: 1fr 10fr;
   row-gap: var(--white-space);
 }
-.topPart form h2 {
+form h2,
+form h3 {
   grid-column: 1/3;
 }
-.topPart form label {
+form label {
   font-size: 1.5rem;
 }
+/*main part*/
+.notesInfo section,
+.notes,
+.notes form {
+  margin-top: calc(var(--white-space) * 2);
+}
+
+/*bootom part*/
+
 @supports (display: grid) {
   @media screen and (min-width: 768px) and (max-width: 1100px) {
   }
