--- a/css/customise.css
+++ b/css/customise.css
@@ -136,7 +136,33 @@ form label {
 }
 
 /*bootom part*/
+.bottomPart > * {
+  margin-top: calc(var(--white-space) * 2);
+}
+.finalComments {
+  display: block;
+  background-color: transparent;
+  padding: 0;
+}
+.finalComments label {
+  font-size: 1.3rem;
+}
 
+.report {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  justify-items: center;
+  row-gap: var(--white-space);
+}
+.report p {
+  font-weight: bolder;
+}
+.checkOut {
+  width: 100%;
+  grid-column: 1/3;
+  display: flex;
+  justify-content: space-evenly;
+}
 @supports (display: grid) {
   @media screen and (min-width: 768px) and (max-width: 1100px) {
   }
