--- a/css/customise.css
+++ b/css/customise.css
@@ -162,6 +162,30 @@ form label {
   grid-column: 1/3;
   display: flex;
   justify-content: space-evenly;
+  align-items: center;
+}
+#amount {
+  border: #364b3e solid 0.2rem;
+  aspect-ratio: 1/1;
+  width: auto;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.checkOut button {
+  border: none;
+  border-radius: 0.6rem;
+  padding: 1rem;
+  background-color: var(--link-color);
+  max-width: 100%;
+  font-family: var(--secondary-font);
+  font-style: normal;
+  color: var(--bg-color);
+}
+.checkOut button:hover {
+  background-color: var(--link-hover-color);
 }
 @supports (display: grid) {
   @media screen and (min-width: 768px) and (max-width: 1100px) {
