--- a/css/customise.css
+++ b/css/customise.css
@@ -28,6 +28,72 @@ body {
   color: var(--main-text-color);
   font-family: var(--secondary-font);
 }
+/*header*/
+header {
+  margin: var(--white-space);
+  display: flex;
+  flex-direction: column;
+  gap: var(--white-space);
+  align-items: center;
+  font-family: var(--primary-font);
+}
+.topNav {
+  width: 100%;
+  display: grid;
+  grid-template-columns: repeat(3, auto);
+  align-items: center;
+
+  overflow: hidden;
+  position: relative;
+}
+header nav {
+  width: 100%;
+  display: none;
+}
+header ul {
+  display: grid;
+  grid-template-rows: repeat(5, auto);
+  justify-items: center;
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+}
+.logo {
+  width: 170%;
+  height: auto;
+  grid-column: 2/3;
+  justify-self: center;
+}
+.logo img {
+  max-width: 100%;
+}
+.menu {
+  max-width: 20%;
+  justify-self: end;
+}
+header a {
+  color: var(--main-text-color);
+  text-decoration: none;
+  font-size: 1.2rem;
+}
+header li {
+  width: 100%;
+  text-align: center;
+  padding: var(--white-space);
+}
+header li:hover {
+  /*background-color: rgb(240, 240, 240);*/
+  border: solid var(--main-text-color) 0.1rem;
+  transition: all ease 0.5s;
+}
+.cart {
+  width: 2rem;
+}
+.cart a {
+  width: 100%;
+  height: auto;
+}
+
 main {
   padding: calc(var(--white-space) * 2);
 }
@@ -186,6 +252,60 @@ form label {
 }
 .checkOut button:hover {
   background-color: var(--link-hover-color);
+}
+
+/*footer*/
+footer {
+  font-family: var(--secondary-font);
+  color: var(--main-text-color);
+  margin: 0 calc(var(--white-space) * 2);
+  padding: calc(var(--white-space) * 2) 0;
+  border-top: solid var(--main-text-color) 0.1rem;
+}
+footer nav {
+  display: grid;
+  gap: calc(var(--white-space) * 3);
+  justify-content: center;
+}
+footer h4 {
+  font-size: 1rem;
+  margin: 0%;
+}
+footer p {
+  padding: 0;
+  margin: 0%;
+}
+.info h4 {
+  text-align: center;
+}
+.info div {
+  display: grid;
+  grid-template-columns: 1fr 5fr;
+  grid-template-rows: repeat(2, auto);
+  column-gap: var(--white-space);
+  align-items: end;
+  padding-top: var(--white-space);
+}
+.info p {
+  grid-column: 2/3;
+}
+.info img {
+  grid-row: 1/3;
+  max-width: 2rem;
+}
+.social {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: 1fr 3fr;
+  row-gap: var(--white-space);
+  justify-items: center;
+}
+.social h4 {
+  grid-column: 1/3;
+  margin: 0;
+}
+.social img {
+  max-width: 3rem;
 }
 @supports (display: grid) {
   @media screen and (min-width: 768px) and (max-width: 1100px) {
