--- a/css/customise.css
+++ b/css/customise.css
@@ -309,7 +309,7 @@ footer p {
   max-width: 3rem;
 }
 @supports (display: grid) {
-  @media screen and (min-width: 768px) and (max-width: 1100px) {
+  @media screen and (min-width: 768px) {
     /*header*/
     header {
       flex-direction: row;
@@ -321,6 +321,7 @@ footer p {
     .topNav {
       display: block;
       width: 50%;
+      aspect-ratio: 16/9;
     }
     header nav {
       display: block;
@@ -343,8 +344,35 @@ footer p {
     .cart {
       width: 10rem;
     }
-    /*main*/
 
+    /*main*/
+    main {
+      margin: calc(var(--white-space) * 4);
+    }
+    .topPart {
+      grid-template-columns: 1fr 1.5fr;
+      column-gap: calc(var(--white-space) * 2);
+    }
+    h1,
+    .interaction {
+      grid-column: 1/3;
+    }
+    .finalComments {
+      display: flex;
+      flex-direction: column;
+    }
+    .notes {
+      display: flex;
+      justify-content: space-between;
+      gap: var(--white-space);
+    }
+
+    .report {
+      margin-top: calc(var(--white-space) * 4);
+    }
+    .checkOut {
+      margin-top: calc(var(--white-space) * 2);
+    }
     /*footer*/
     footer nav {
       display: grid;
@@ -353,6 +381,53 @@ footer p {
     }
   }
   @media screen and (min-width: 1101px) {
+    /*main*/
+    main {
+      font-size: 1.3rem;
+    }
+    .topPart {
+      grid-template-columns: 1fr 1.5fr 1fr;
+      row-gap: var(--white-space);
+      column-gap: 0;
+    }
+    h1 {
+      font-size: 2.6rem;
+      grid-column: 1/2;
+      grid-row: 1/2;
+      text-align: left;
+    }
+    .interaction {
+      grid-column: 2/3;
+      grid-row: 1/4;
+      align-self: center;
+    }
+    .ingredients {
+      grid-column: 1/2;
+      grid-row: 2/3;
+      align-self: flex-end;
+    }
+    .instructions {
+      grid-column: 1/2;
+      grid-row: 3/4;
+    }
+    .shape {
+      grid-column: 3/4;
+      grid-row: 1/3;
+    }
+    .topPart > div,
+    .topPart > form {
+      margin-top: 0;
+    }
+    form label {
+      font-size: 1rem;
+    }
+    article,
+    .bottomPart {
+      margin: 0 calc(var(--white-space) * 4);
+    }
+    .notes form {
+      width: 30%;
+    }
     /*footer*/
     footer nav {
       gap: calc(var(--white-space) * 30);
