--- a/css/style.css
+++ b/css/style.css
@@ -323,6 +323,99 @@ b {
 }
 
 @supports (display: grid) {
+  .shelf {
+    max-width: 100%;
+    position: relative;
+    z-index: 1;
+  }
+
+  body {
+    margin: 0%;
+  }
+
+  .logo-negative {
+    width: 26%;
+    z-index: 2;
+    position: absolute;
+    top: 20%;
+    left: 38%;
+  }
+
+  .logo_box {
+    position: relative;
+    width: 100%;
+    margin: none;
+  }
+
+  .shop_box {
+    margin: 0%;
+    background-color: #a2c8f4;
+    display: flex;
+    justify-content: space-between;
+  }
+
+  .create_box {
+    margin: 0%;
+    background-color: #97cfca;
+    display: flex;
+    justify-content: space-between;
+  }
+
+  .read_box {
+    margin: 0%;
+    background-color: #f3b3b9;
+    display: flex;
+    justify-content: space-between;
+  }
+
+  .workshop_box {
+    margin: 0%;
+    background-color: #a9a1ca;
+    display: flex;
+    justify-content: space-between;
+  }
+
+  .right-align-text {
+    margin-left: 22%;
+  }
+  .right-align-text2 {
+    margin-left: 40%;
+  }
+
+  h2 {
+    font-family: var(--primary-font);
+    font-weight: 500;
+    color: white;
+    margin-right: 3%;
+    margin-left: 3%;
+    align-self: center;
+  }
+
+  .HideThisInMobile {
+    visibility: hidden;
+    width: 1%;
+  }
+
+  .HideThis {
+    visibility: hidden;
+    font-size: 1%;
+  }
+
+  .leaf-1 {
+    width: 33%;
+    align-content: flex-end;
+  }
+
+  .leaf-2 {
+    width: 33%;
+    align-content: flex-start;
+  }
+
+  .HideInMobileVersion {
+    visibility: hidden;
+    font-size: 1%;
+  }
+
   .categories {
     display: flex;
     justify-content: space-between;
@@ -416,6 +509,146 @@ b {
     }
   }
   @media screen and (min-width: 1101px) {
+    .logo-negative {
+      width: 13%;
+      z-index: 2;
+      position: absolute;
+      top: 29%;
+      left: 45%;
+    }
+
+    section {
+      display: grid;
+      grid-template-columns: 40% 60%;
+      grid-template-rows: 42.5% 15% 42.5%;
+    }
+
+    .create_box {
+      flex-direction: column;
+      grid-column-start: 2;
+      padding-top: 10%;
+      padding-bottom: 13%;
+    }
+
+    .shop_box {
+      grid-column-start: 1;
+      grid-row-start: 1;
+      grid-row-end: 3;
+      justify-content: flex-start;
+      padding-bottom: 10%;
+    }
+
+    .read_box {
+      margin: 0%;
+      background-color: #f3b3b9;
+      display: flex;
+      flex-direction: column;
+      justify-content: space-around;
+      grid-row-start: 2;
+      grid-row-end: 4;
+      grid-column-start: 2;
+    }
+
+    .workshop_box {
+      margin: 0%;
+      background-color: #a9a1ca;
+      display: flex;
+      justify-content: space-between;
+      flex-direction: column;
+      padding-top: 20%;
+      padding-bottom: 45%;
+    }
+
+    .leaf-2 {
+      visibility: hidden;
+      width: 7%;
+    }
+
+    .leaf-1 {
+      visibility: hidden;
+    }
+
+    a {
+      background-color: #f3b3b9;
+      border-radius: 0.6rem;
+      font-family: var(--secondary-font);
+      text-align: center;
+      position: absolute;
+      z-index: 4;
+    }
+
+    .HideInMobileVersion {
+      visibility: visible;
+      font-size: 100%;
+    }
+
+    .create-text {
+      margin-left: 4.5%;
+    }
+
+    .HideThis {
+      visibility: visible;
+      font-size: 100%;
+      font-family: var(--secondary-font);
+      color: white;
+      text-align: center;
+    }
+
+    .HideThisInMobile {
+      visibility: visible;
+      width: 25%;
+    }
+    .right-align-text2 {
+      margin-left: 1%;
+    }
+
+    .positionCreateButton {
+      position: absolute;
+      background-color: #f3b3b9;
+      border-radius: 0.6rem;
+      font-family: var(--secondary-font);
+      text-align: center;
+      position: absolute;
+      color: white;
+      padding: 1.3%;
+      margin-left: 21%;
+      margin-top: 12%;
+      z-index: 4;
+    }
+
+    .positionShopButton {
+      margin-left: 14.5%;
+      margin-top: 25%;
+      color: white;
+      padding: 1.3%;
+      z-index: 4;
+    }
+    .bottom-twirl {
+      margin-left: 1%;
+      width: 19%;
+      position: absolute;
+    }
+
+    .read-all {
+      margin-left: 60%;
+    }
+
+    .mission-vision {
+      position: relative;
+      align-self: right;
+      text-align: end;
+      /* margin-left: 3%; */
+      padding-right: 2%;
+    }
+
+    .plant {
+      top: 110%;
+      left: 30%;
+      position: absolute;
+      width: 50%;
+      z-index: 3;
+    }
+
     #product_main {
       border-radius: 2.5rem;
       margin: 2.5rem;
